# cfnb

./: .gitattributes  .gitignore  .pre-commit-config.yaml  cf_gui.py  cfdata-config.json  config.py  dns.py  fetcher.py  main.py  output.py  push.py  pyproject.toml  scan_warp.py  speed.py  tester.py  update_cfdata.py
.github/workflows/: ci.yml
src/cfnb/: __init__.py  __main__.py  config.py  country_codes.json  dns.py  fetcher.py  latency.py  notify.py  output.py  push.py  speed.py  subscription.py  tester.py
src/cfnb/gui/: constants.py  styles.py
src/cfnb/gui/widgets/: dashboard.py  progress_helper.py  results.py  scrollframe.py  settings.py  stepper.py  sub_manager.py
src/cfnb/util/: proxy.py
tests/: test_config.py  test_fetcher.py  test_latency.py  test_output.py  test_speed.py  test_subscription.py
