[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfnb"
version = "2.0.0"
description = "Cloudflare IP 优选工具 - 全自动 CDN 节点测速、筛选、DNS 更新、GitHub 同步"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "xinyitang3", email = "xinyitang3@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
cfnb = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "scripts*", "__pycache__*", "*.exe", "*.pkl", "*.log"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "__pycache__",
    ".git",
    "cfdata.exe",
    "cfipgui.exe",
    "*.pkl",
    "*.log",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "T20",
]
ignore = [
    "T201",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"scan_warp.py" = ["T201"]
"cf_gui.py" = ["T201"]
"scripts/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "scripts/",
    "__pycache__",
    "cf_gui.py",
    "scan_warp.py",
    "update_cfdata.py",
    "tests/",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "scripts/*",
    "cf_gui.py",
    "scan_warp.py",
    "update_cfdata.py",
    "main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pre-commit-hooks]